<resources>
    <string name="app_name">Licencia QR</string>
    <!--<string name="app_name">Comercio electrónico QR</string>-->
    <string name="drawer_user">Taylor Swift</string>
    <string name="login_user_name">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="new_user">¿Nuevo usuario?</string>
    <string name="sign_up">Regístrate</string>
    <string name="logotipo_description">Logotipo de la Municipalidad de San Isidro</string>

    <string name="scanner_explication">Acerca la imagen del <b>código QR</b> a una distancia razonable para poder escanearla.</string>
    <string name="form_code">Código</string>
    <string name="form_anio">Año</string>
    <string name="search">BUSCAR</string>


    <string name="etiqueta_codigo">Código:</string>
    <string name="etiqueta_formato">Tipo de código:</string>
    <string name="caption_scanner">QR Code Scanner TAYLOR</string>
    <string name="etiqueta_button1">Con ZXing</string>
    <string name="etiqueta_button2">Con Code Scanner</string>

    <string name="back_to_home">Volver al inicio</string>

    <string name="app_description">La aplicación tiene la funcionalidad de escaner el QR de las licencias de funcionamiento y realizar una busqueda por el codigo y año digitado en el documento.\nMuestra el resultado de una licencia despues de escanear </string>
    <string name="term_of_services">Término de servicios</string>


    <string name="qr_renewal_of_commerce_on_public_roads">Renovación del Comercio en la Vía Público</string>
    <string name="qr_operating_license">Licencia de Funcionamiento</string>
    <string name="qr_technical_inspection_certificate">Certificado de inspección técnica</string>
    <string name="qr_reading">Lectura QR</string>
    <string name="consultation">Consulta</string>

    <string name="application_info">Info. de la aplicación</string>
    <string name="logout">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Taylor Swift</string>
    <string name="nav_header_subtitle">Navigation header</string>


</resources>